--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "framer-motion": "^1.6.15",
+    "materialize-css": "1.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-materialize": "3.9.3",
+    "react-modal": "^3.11.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-materialize": "3.9.3",
-    "materialize-css": "1.0.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
