--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "framer-motion": "^1.6.15",
+    "jquery": "^3.5.1",
     "materialize-css": "1.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-materialize": "3.9.3",
-    "react-modal": "^3.11.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
