--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "materialize-css": "1.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-h5-audio-player": "^3.5.0",
     "react-materialize": "3.9.3",
     "react-modal": "^3.12.1",
     "react-router": "^5.1.2",
