--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-h5-audio-player": "^3.5.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-materialize": "3.9.3",
     "react-modal": "^3.12.1",
     "react-router": "^5.1.2",
