adds favicon adn names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-page-transitions",
+  "name": "se-buscan-testigos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
